<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="bottom">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/Menu_frag_toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_home"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/poi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_poi"
            />
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/favori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_favori"
        />
    </com.google.android.material.button.MaterialButtonToggleGroup>
</LinearLayout>