<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="#F0FFFFFF"
    app:cardElevation="1dp"
    android:id="@+id/card_meteo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="4dp"
        tools:context=".fragments.FragmentMeteo">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_aujourd_hui"
            android:textStyle="bold"
            android:layout_marginVertical="4dp"/>

        <TextView
            android:id="@+id/tv_temp_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_temp_max"
            android:layout_below="@+id/tv_date"/>
        <TextView
            android:id="@+id/temp_max"
            android:text="20.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_temp_max"
            android:layout_below="@+id/tv_date"
            android:paddingStart="4dp"/>

        <TextView
            android:id="@+id/tv_temp_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_temp_min"
            android:layout_marginVertical="2dp"
            android:layout_below="@+id/tv_temp_max"/>
        <TextView
            android:id="@+id/temp_min"
            android:text="18.00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:layout_toRightOf="@+id/tv_temp_min"
            android:layout_below="@+id/tv_temp_max"
            android:paddingStart="4dp"/>
        <ImageView
            android:id="@+id/icon_meteo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
